Fix forfeit button position on smaller screens

--- a/client/src/app/game/game.module.css
+++ b/client/src/app/game/game.module.css
@@ -18,7 +18,7 @@
 }
 
 .forfeit {
-	position: absolute;
+	position: fixed;
 	top: 2px;
 	right: 2px;
 	cursor: pointer;
